--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
     }
    ],
    "source": [
-    "print(bag_of_words)"
+    "print(bag_of_words)\n"
    ]
   },
   {
@@ -260,55 +260,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Ironhack is cool.', 'I love Ironhack.', 'I am a student at Ironhack.']\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 2, 2, 2, 2]\n",
       "['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at']\n",
-      "Ironhack is cool.\n",
-      "I love Ironhack.\n",
-      "I am a student at Ironhack.\n",
-      "Ironhack is cool.\n",
-      "I love Ironhack.\n",
-      "I am a student at Ironhack.\n",
-      "Ironhack is cool.\n",
-      "I love Ironhack.\n",
-      "I am a student at Ironhack.\n",
-      "Ironhack is cool.\n",
-      "I love Ironhack.\n",
-      "I am a student at Ironhack.\n",
-      "Ironhack is cool.\n",
-      "I love Ironhack.\n",
-      "I am a student at Ironhack.\n",
-      "Ironhack is cool.\n",
-      "I love Ironhack.\n",
-      "I am a student at Ironhack.\n",
-      "Ironhack is cool.\n",
-      "I love Ironhack.\n",
-      "I am a student at Ironhack.\n",
-      "Ironhack is cool.\n",
-      "I love Ironhack.\n",
-      "I am a student at Ironhack.\n",
-      "Ironhack is cool.\n",
-      "I love Ironhack.\n",
-      "I am a student at Ironhack.\n"
+      "['k', 's', 'l']\n"
      ]
     }
    ],
    "source": [
+    "#term_freq=[count(corpus_lower[i]) for i in range(len(corpus_lower)) for corpus_lower[i] in bag_of_words[i]]\n",
     "\n",
     "term_freq = []\n",
-    "print(corpus)\n",
-    "print(bag_of_words)\n",
-    "for i in bag_of_words:\n",
-    "    for i in corpus:\n",
-    "        print(i)\n",
-    " \n",
+    "for i in range(len(corpus_lower)):\n",
+    "    for corpus_lower[i] in bag_of_words[i]:\n",
+    "        term_freq.append(i)\n",
+    "      \n",
+    "   \n",
+    "        \n",
+    "print(term_freq)  \n",
     "\n",
+    " \n",
+    "print(bag_of_words)\n",
+    "print(corpus_lower)\n",
     "# Write your code here"
    ]
   },
@@ -330,7 +309,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "[0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 2, 2, 2, 2]\n"
      ]
     }
    ],
@@ -418,6 +397,13 @@
     " [1 1 0 1 0 0 1]]\n",
     " ```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
